--- a/homework_new1.html
+++ b/homework_new1.html
@@ -128,6 +128,8 @@
         <script>
             function order() {
                 alert("주문이 완료되었습니다.");
+                alert("주문이 완료되었습니다.");
+
             }
         </script>
     </head>
